--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -27,3 +27,52 @@
 @book{bynum_hackebeil_hart_laird_nicholson_siirola_watson_2021, place={Cham, CH}, title={Pyomo - Optimization Modeling in Python}, publisher={Springer}, author={Bynum, Michael L. and Hackebeil, Gabriel A. and Hart, William E. and Laird, Carl D. and Nicholson, Bethany L. and Siirola, John D. and Watson, Jean-Paul}, year={2021}} 
 
 @book{maynard_zandin_2001, place={New York, NY}, title={Maynard's Industrial Engineering Handbook}, publisher={McGraw-Hill}, author={Maynard, Harold B. and Zandin, Kjell B.}, year={2001}} 
+
+@software{ortools,
+  title = {OR-Tools},
+  version = {7.2},
+  author = {Laurent Perron and Vincent Furnon},
+  organization = {Google},
+  url = {https://developers.google.com/optimization/},
+  date = {2019-7-19}
+}
+
+@article{mitchell2011pulp,
+  title={PuLP: a linear programming toolkit for python},
+  author={Mitchell, Stuart and OSullivan, Michael and Dunning, Iain},
+  journal={The University of Auckland, Auckland, New Zealand},
+  pages={65},
+  year={2011}
+}
+
+ @software{coin-or_2009, 
+	title={Optimization with PuLP}, 
+	version = {2.5}, 
+	author={COIN-OR}, 
+	url={https://coin-or.github.io/pulp/}, 
+	organization = {COIN-OR}, 
+	year={2009}} 
+ 
+ @ARTICLE{2020SciPy-NMeth,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2},
+}
