--- a/content/getting-started/1950s-to-Today.Rmd
+++ b/content/getting-started/1950s-to-Today.Rmd
@@ -1,7 +1,7 @@
 ---
-date: "2019-10-26T15:26:15Z"
+date: "2021-09-12T15:26:15Z"
 draft: false
-title: Screenshot
+title: 1950s - Today
 weight: 30
 ---
 
