--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -84,4 +84,11 @@
 	publisher={Athena Scientific}, 
 	author={Bertsekas, Dimitri P. and Tsitsiklis, John N.}, 
 	year={2008}} 
+	
+@book{gass_assad_2005, 
+  place={New York, NY}, 
+  title={An Annotated Timeline of Operations Research: An Informal History}, 
+  publisher={Kluwer Academic Publishers}, 
+  author={Gass, Saul I. and Assad, Arjang}, 
+  year={2005}} 
  
