--- a/content/getting-started/references.bib
+++ b/content/getting-started/references.bib
@@ -86,3 +86,13 @@
 	year={2008}} 
 
 @book{gass_assad_2005, place={New York, NY}, title={An Annotated Timeline of Operations Research: An Informal History}, publisher={Kluwer Academic Publishers}, author={Gass, Saul I. and Assad, Arjang}, year={2005}}  
+
+@misc{theorsocietyuk_2017, url={https://www.youtube.com/watch?v=ILWbaWrjgU4}, journal={YouTube}, publisher={YouTube}, author={TheORSocietyUK}, year={2017}, month={Feb}}
+
+@misc{holsten_1998, title={Operations research}, url={https://www.britannica.com/topic/operations-research}, journal={Encyclopedia Britannica}, publisher={Encyclopedia Britannica, inc.}, author={Holsten, William K.}, year={1998}, month={Sep}}
+
+@misc{*, title={History of Linear Programming}, url={https://matlab1.com/history-linear-programming/}, journal={MATLAB One}, publisher={MATLAB}, author={*, Name}}
+
+@misc{matlab_2020, title={History of Linear Programming}, url={https://matlab1.com/history-linear-programming/}, journal={MATLAB One}, publisher={MATLAB}, author={MATLAB}, year={2020}, month={Oct}}
+
+@misc{holsten_1999, title={Industrial engineering}, url={https://www.britannica.com/technology/industrial-engineering}, journal={Encyclopedia Britannica}, publisher={Encyclopedia Britannica, inc.}, author={Holsten, William K.}, year={1999}, month={Jul}}
