--- a/content/getting-started/1950s-to-Today.Rmd
+++ b/content/getting-started/1950s-to-Today.Rmd
@@ -3,22 +3,14 @@ date: "2021-09-12T15:26:15Z"
 draft: false
 title: 1950s - Today
 weight: 30
+bibliography: references.bib
 ---
 
-### Theme color
+## Functions of Industrial Engineering and Operations Research Professionals
 
-![Theme color](https://raw.githubusercontent.com/thingsym/hugo-theme-techdoc/master/images/screenshot-theme-color.png)
+As the 70s and 80s approached, industrial engineering as a field became more 
+generalized with more quantitative techniques and computers being introduced, 
+there was little difference between industrial engineering and operations 
+research [@holsten_1999].
 
-### Menu style
-
-#### Open Menu
-
-![Open Menu](https://raw.githubusercontent.com/thingsym/hugo-theme-techdoc/master/images/screenshot-open-menu.png)
-
-#### Slide Menu
-
-![Slide Menu](https://raw.githubusercontent.com/thingsym/hugo-theme-techdoc/master/images/screenshot-slide-menu.gif)
-
-### Edit link
-
-![Edit link](https://raw.githubusercontent.com/thingsym/hugo-theme-techdoc/master/images/screenshot-edit-link.png)
+## References
