--- a/content/getting-started/WWI-to-WWII-era.Rmd
+++ b/content/getting-started/WWI-to-WWII-era.Rmd
@@ -29,9 +29,10 @@ physicist, redeployed the convoy system from WWI and tested the UK's new radar
 capabilities with great success. The U.S. Air Force eventually decided to have 
 their own operations research groups for wargaming purposes. After WWII, 
 mathematician George B. Dantzig developed the linear programming formulation 
-(Leonid Vitalievich Kantorovich from the USSR came up with it although 
-his work wasn't popular among USSR economists) [@matlab_2020]. Operations 
-research become widespread in the US private sector where over half of US 
-companies used it at some function [@holsten_1998]. 
+for the Air Force to optimize planning costs (Leonid Vitalievich Kantorovich 
+from the USSR came up with it earlier although his work wasn't popular among 
+USSR economists) [@matlab_2020]. Operations research become widespread in the US 
+private sector where over half of US companies used it at some function 
+[@holsten_1998]. 
 
 ## References
