--- a/python scripts/Operations Research Models and Applications Problems.ipynb
+++ b/python scripts/Operations Research Models and Applications Problems.ipynb
@@ -40,7 +40,7 @@
       "x[0] = 884.21\n",
       "x[1] = 189.47\n",
       "\n",
-      "Problem solved in 1.000000 milliseconds\n",
+      "Problem solved in 13.000000 milliseconds\n",
       "Problem solved in 3 iterations\n",
       "Problem solved in -1 branch-and-bound nodes\n"
      ]
@@ -204,7 +204,7 @@
       "x[5] = 93\n",
       "x[6] = 0\n",
       "\n",
-      "Problem solved in 8.000000 milliseconds\n",
+      "Problem solved in 73.000000 milliseconds\n",
       "Problem solved in 5 iterations\n",
       "Problem solved in 1 branch-and-bound nodes\n"
      ]
@@ -237,7 +237,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "0bc993f8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -252,7 +254,7 @@
       "The UseLocation_Cleveland site should be used for facility construction.\n",
       "The UseLocation_Middletown site should be used for facility construction.\n",
       "The minimum total annual cost is $5,730.00.\n",
-      "Problem solved in 42.000000 milliseconds\n",
+      "Problem solved in 123.000000 milliseconds\n",
       "Problem solved in -1 iterations\n",
       "Problem solved in -1 branch-and-bound nodes\n"
      ]
@@ -285,6 +287,65 @@
     "\n",
     "data = cdm.create_ip_data_model(CUSTOMERS, FACILITY, MD, FC, Capacity, TransportRates)\n",
     "aflp.CFL(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5d03e6",
+   "metadata": {},
+   "source": [
+    "## Resource Planning\n",
+    "\n",
+    "You have 7 products. Each product requires 3 types of materials. You're have a supply limit of said material while each product uses different amounts of each material. In addition, each product sells for a different price and we want to maximize profit through a linear integer program.\n",
+    "\n",
+    "\\begin{align}\n",
+    "max ~ & \\sum_{i = 1}^n C_ix_i  \\\\\n",
+    "& \\sum_{i = 1}^n c_ix_i \\leq D,  ~ \\text{Supply limit}\\\\\n",
+    "& x_i \\geq 0, i = \\{1, 2, ..., n\\}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "876d5a9b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of variables = 7\n",
+      "Number of constraints = 3\n",
+      "Objective value = 3404\n",
+      "x[0] = 7\n",
+      "x[1] = 0\n",
+      "x[2] = 0\n",
+      "x[3] = 17\n",
+      "x[4] = 0\n",
+      "x[5] = 0\n",
+      "x[6] = 9\n",
+      "\n",
+      "Problem solved in 117.000000 milliseconds\n",
+      "Problem solved in 4 iterations\n",
+      "Problem solved in 1 branch-and-bound nodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "constraints = [100, 150, 200]\n",
+    "cont_coeffs = [\n",
+    "    [0, 5, 5, 4, 8, 5, 3],\n",
+    "    [3, 10, 3, 6, 2, 2, 2],\n",
+    "    [10, 10, 9, 3, 8, 10, 7]\n",
+    "]\n",
+    "obj_coeffs = [100, 120, 135, 90, 125, 110, 105]\n",
+    "signs = [\"<=\"] * len(constraints)\n",
+    "\n",
+    "data = cdm.create_lp_data_model(constraints, cont_coeffs, obj_coeffs, signs)\n",
+    "aip.automate_ipMax(data)"
    ]
   }
  ],
