--- a/content/getting-started/1950s-to-Today.Rmd
+++ b/content/getting-started/1950s-to-Today.Rmd
@@ -8,9 +8,32 @@ bibliography: references.bib
 
 ## Functions of Industrial Engineering and Operations Research Professionals
 
-As the 70s and 80s approached, industrial engineering began to lose its identity 
-with more quantitative techniques and computers being introduced, there was 
-little difference between industrial engineering and operations research 
-[@holsten_1999].
+As the 70s and 80s approached, some talks claimed that industrial engineering was
+losing its identity with more quantitative techniques and computers being 
+introduced. Yet the differences between industrial engineering and operations 
+research couldn't get any more distinct [@holsten_1999]. If we were to look at 
+the BLS and compare occupations:
+
+---
+
+**Industrial Engineers**
+
+"Industrial engineers devise efficient systems that integrate workers, machines, 
+materials, information, and energy to make a product or provide a service."
+
+**Operations Research Analyst**
+
+"Operations research analysts use advanced mathematical and analytical methods 
+to help solve complex issues."
+
+---
+
+Industrial engineering is more domain-focused (manufacturing in particular) on 
+**optimizing processes.** Operations research focuses on **how to optimize** 
+resources at hand to achieve an organizational goal. You'll see the skillsets of
+industrial engineers involve quality control, improving production flow, and
+time/cost reduction. While operations research analysts are involved in some of
+those processes, they are not normally the main decision makers despite helping
+in the decision-making process.
 
 ## References
