--- a/content/getting-started/1950s-to-Today.Rmd
+++ b/content/getting-started/1950s-to-Today.Rmd
@@ -29,11 +29,12 @@ to help solve complex issues."
 ---
 
 Industrial engineering is more domain-focused (manufacturing in particular) on 
-**optimizing processes.** Operations research focuses on **how to optimize** 
-resources at hand to achieve an organizational goal. You'll see the skillsets of
-industrial engineers involve quality control, improving production flow, and
-time/cost reduction. While operations research analysts are involved in some of
-those processes, they are not normally the main decision makers despite helping
-in the decision-making process.
+**optimizing processes, ergonomics, design, material handling,** and more [@maynard_zandin_2001]. 
+Operations research focuses on **how to optimize** resources at hand to achieve 
+an organizational goal. You'll see the skillsets of industrial engineers involve 
+quality control, improving production flow, and time/cost reduction. While 
+operations research analysts are involved in some of those processes, they are 
+not normally the key decision makers despite helping in that 
+decision-making process.
 
 ## References
