--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -22,74 +22,23 @@
 	author={Nachlas, Joel A.}, 
 	year={2017}} 
 
-@book{boyd_vandenberghe_2018, place={Cambridge, MA}, title={Convex Optimization}, publisher={Cambridge University Press}, author={Boyd, Stephen P. and Vandenberghe, Lieven}, year={2018}} 
+@book{maynard_zandin_2001, 
+  place={New York, NY}, 
+  title={Maynard's Industrial Engineering Handbook}, 
+  publisher={McGraw-Hill}, 
+  author={Maynard, Harold B. and Zandin, Kjell B.}, 
+  year={2001}} 
 
-@book{bynum_hackebeil_hart_laird_nicholson_siirola_watson_2021, place={Cham, CH}, title={Pyomo - Optimization Modeling in Python}, publisher={Springer}, author={Bynum, Michael L. and Hackebeil, Gabriel A. and Hart, William E. and Laird, Carl D. and Nicholson, Bethany L. and Siirola, John D. and Watson, Jean-Paul}, year={2021}} 
-
-@book{maynard_zandin_2001, place={New York, NY}, title={Maynard's Industrial Engineering Handbook}, publisher={McGraw-Hill}, author={Maynard, Harold B. and Zandin, Kjell B.}, year={2001}} 
-
-@software{ortools,
-  title = {OR-Tools},
-  version = {7.2},
-  author = {Laurent Perron and Vincent Furnon},
-  organization = {Google},
-  url = {https://developers.google.com/optimization/},
-  date = {2019-7-19}
-}
-
-@article{mitchell2011pulp,
-  title={PuLP: a linear programming toolkit for python},
-  author={Mitchell, Stuart and O'Sullivan, Michael and Dunning, Iain},
-  journal={The University of Auckland, Auckland, New Zealand},
-  pages={65},
-  year={2011}
-}
-
-@software{coin-or_2009, 
-	title={Optimization with PuLP}, 
-	version = {2.5}, 
-	author={COIN-OR}, 
-	url={https://coin-or.github.io/pulp/}, 
-	organization = {COIN-OR}, 
-	year={2009}} 
- 
-@ARTICLE{2020SciPy-NMeth,
-  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
-            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
-            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
-            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
-            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
-            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
-            Kern, Robert and Larson, Eric and Carey, C J and
-            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
-            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
-            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
-            Harris, Charles R. and Archibald, Anne M. and
-            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
-            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
-  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
-            Computing in Python}},
-  journal = {Nature Methods},
-  year    = {2020},
-  volume  = {17},
-  pages   = {261--272},
-  adsurl  = {https://rdcu.be/b08Wh},
-  doi     = {10.1038/s41592-019-0686-2},
-}
-
-@book{bertsekas_tsitsiklis_2008, 
-	place={Belmont, CA}, 
-	edition={2nd}, 
-	title={Introduction to Probability}, 
-	publisher={Athena Scientific}, 
-	author={Bertsekas, Dimitri P. and Tsitsiklis, John N.}, 
-	year={2008}} 
-	
 @book{gass_assad_2005, 
   place={New York, NY}, 
   title={An Annotated Timeline of Operations Research: An Informal History}, 
   publisher={Kluwer Academic Publishers}, 
   author={Gass, Saul I. and Assad, Arjang}, 
-  year={2005}} 
-
-@misc{theorsocietyuk_2017, url={https://www.youtube.com/watch?v=ILWbaWrjgU4}, journal={YouTube}, publisher={YouTube}, author={TheORSocietyUK}, year={2017}, month={Feb}} 
+  year={2005}}  
+  
+@book{discover2012,
+  place={Thousand Oaks, CA},
+  title={Discovering Statistics Using {R}},
+  publisher={SAGE Publications},
+  author={Field, Andy and Miles, Jeremy and Field, Zoe},
+  year={2012}}
