--- a/python scripts/Operations Research Models and Applications Problems.ipynb
+++ b/python scripts/Operations Research Models and Applications Problems.ipynb
@@ -121,7 +121,7 @@
       "x[5] = 93.33\n",
       "x[6] = 0.00\n",
       "\n",
-      "Problem solved in 1.000000 milliseconds\n",
+      "Problem solved in 0.000000 milliseconds\n",
       "Problem solved in 7 iterations\n",
       "Problem solved in -1 branch-and-bound nodes\n"
      ]
@@ -204,7 +204,7 @@
       "x[5] = 93\n",
       "x[6] = 0\n",
       "\n",
-      "Problem solved in 73.000000 milliseconds\n",
+      "Problem solved in 72.000000 milliseconds\n",
       "Problem solved in 5 iterations\n",
       "Problem solved in 1 branch-and-bound nodes\n"
      ]
@@ -254,7 +254,7 @@
       "The UseLocation_Cleveland site should be used for facility construction.\n",
       "The UseLocation_Middletown site should be used for facility construction.\n",
       "The minimum total annual cost is $5,730.00.\n",
-      "Problem solved in 123.000000 milliseconds\n",
+      "Problem solved in 82.000000 milliseconds\n",
       "Problem solved in -1 iterations\n",
       "Problem solved in -1 branch-and-bound nodes\n"
      ]
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "876d5a9b",
    "metadata": {
     "scrolled": true
@@ -328,7 +328,7 @@
       "x[5] = 0\n",
       "x[6] = 9\n",
       "\n",
-      "Problem solved in 117.000000 milliseconds\n",
+      "Problem solved in 8.000000 milliseconds\n",
       "Problem solved in 4 iterations\n",
       "Problem solved in 1 branch-and-bound nodes\n"
      ]
@@ -345,6 +345,77 @@
     "signs = [\"<=\"] * len(constraints)\n",
     "\n",
     "data = cdm.create_lp_data_model(constraints, cont_coeffs, obj_coeffs, signs)\n",
+    "aip.automate_ipMax(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "749bdee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of variables = 2\n",
+      "Number of constraints = 3\n",
+      "Objective value = 17.33\n",
+      "x[0] = 14.67\n",
+      "x[1] = 1.33\n",
+      "\n",
+      "Problem solved in 0.000000 milliseconds\n",
+      "Problem solved in 2 iterations\n",
+      "Problem solved in -1 branch-and-bound nodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "constraints = [16, 20, 8]\n",
+    "const_coeffs = [\n",
+    "    [1, 1],\n",
+    "    [1, 4],\n",
+    "    [0, 1]\n",
+    "]\n",
+    "obj_coeffs = [1, 2]\n",
+    "signs = [\"<=\", \"=>\", \"<=\"]\n",
+    "\n",
+    "data = cdm.create_lp_data_model(constraints, const_coeffs, obj_coeffs, signs)\n",
+    "alp.automate_lpMax(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38326f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of variables = 2\n",
+      "Number of constraints = 2\n",
+      "Objective value = 23\n",
+      "x[0] = 8\n",
+      "x[1] = 7\n",
+      "\n",
+      "Problem solved in 6.000000 milliseconds\n",
+      "Problem solved in 0 iterations\n",
+      "Problem solved in 1 branch-and-bound nodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "constraints = [16, 7.5]\n",
+    "const_coeffs = [\n",
+    "    [1, 1],\n",
+    "    [0, 1]\n",
+    "]\n",
+    "obj_coeffs = [1, 2]\n",
+    "signs = [\"<=\", \"<=\"]\n",
+    "\n",
+    "data = cdm.create_lp_data_model(constraints, const_coeffs, obj_coeffs, signs)\n",
     "aip.automate_ipMax(data)"
    ]
   }
