--- a/content/getting-started/1700s-to-Early-1900s.Rmd
+++ b/content/getting-started/1700s-to-Early-1900s.Rmd
@@ -58,12 +58,16 @@ same goal with work as Whitney did with parts.
 
 For those who have worked on any project(s) in any environment, you probably
 have seen bar charts that displays the project schedule. Gannt charts, invented
-by Henry L. Grantt, proposed them to be used to represent the precedence
+by Henry L. Gantt, proposed them to be used to represent the precedence
 relationship between tasks, completion schedules, and tracking performance. 
 Its commonly used with in the construction industry with the numerous steps
 necessary before moving on to the next phases of construction (i.e. need walls
 and a floor before you can build a roof).
 
+<center>
+
 ![A Gantt Chart. Source: Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/GanttChartAnatomy.svg/330px-GanttChartAnatomy.svg.png)
+
+</center>
 
 ## References
