1st section of linear algebra done

--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -42,3 +42,11 @@
   publisher={SAGE Publications},
   author={Field, Andy and Miles, Jeremy and Field, Zoe},
   year={2012}}
+  
+@book{Yoshida2021,
+  place={Boca Raton, FL},
+  title={Linear Algebra and its Applications with {R}},
+  publisher={Taylor & Francis Group},
+  author={Yoshida, Ruriko},
+  year={2021}
+}
