--- a/content/getting-started/references.bib
+++ b/content/getting-started/references.bib
@@ -42,3 +42,5 @@
   publisher={SAGE Publications},
   author={Field, Andy and Miles, Jeremy and Field, Zoe},
   year={2012}}
+  
+@misc{history_editors_2009, title={British naval convoy system introduced}, url={https://www.history.com/this-day-in-history/british-naval-convoy-system-introduced}, journal={History.com}, publisher={A&E Television Networks}, author={History.com Editors}, year={2009}, month={Oct}}
