--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -14,21 +14,6 @@
 	author={Winston, Wayne L.}, 
 	year={2004}} 
 
-@book{nachlas_2017, 
-	place={Boca Raton, FL}, 
-	edition={2nd}, 
-	title={Reliability Engineering: Probabilistic Models and Maintenance Methods}, 
-	publisher={CRC Press}, 
-	author={Nachlas, Joel A.}, 
-	year={2017}} 
-
-@book{maynard_zandin_2001, 
-  place={New York, NY}, 
-  title={Maynard's Industrial Engineering Handbook}, 
-  publisher={McGraw-Hill}, 
-  author={Maynard, Harold B. and Zandin, Kjell B.}, 
-  year={2001}} 
-
 @book{gass_assad_2005, 
   place={New York, NY}, 
   title={An Annotated Timeline of Operations Research: An Informal History}, 
@@ -50,3 +35,18 @@
   author={Yoshida, Ruriko},
   year={2021}
 }
+
+@book{patty_2015, 
+  place={New York}, 
+  title={Handbook of Operations Research Applications at Railroads}, 
+  publisher={Springer}, 
+  author={Patty, Bruce W.}, 
+  year={2015}}
+  
+@book{hyndman_athanasopoulos_2021, 
+  place={Melbourne, Australia}, 
+  edition={3rd}, 
+  title={Forecasting: Principles and Practice}, 
+  publisher={OTexts}, 
+  author={Hyndman, Rob J. and Athanasopoulos, George}, 
+  year={2021}}
