--- a/content/post/resources.Rmd
+++ b/content/post/resources.Rmd
@@ -8,7 +8,7 @@ description: ""
 menu: main
 tags:
 - operations research
-- industrial engineering
+- optimization
 - mathematical programming
 title: References
 bibliography: references.bib
